# scholarrail-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pipeline.py  pyproject.toml  setup_keys.py  stages.py
.github/workflows/: ci.yml
scholarrail_pipeline/: __init__.py  citations.py  llm.py  pipeline.py
tests/: test_pipeline.py
